// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Blocks raw handling pasteHandler should remove extra blank lines 1`] = `
"<!-- wp:paragraph -->
<p>1</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>2</p>
<!-- /wp:paragraph -->"
`;

exports[`Blocks raw handling pasteHandler should strip HTML formatting space from inline text 1`] = `"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent a elit eget tortor molestie egestas. Donec pretium urna vitae mattis imperdiet. Praesent et lorem iaculis, volutpat odio vitae, ornare lacus. Donec ut felis tristique, pharetra erat id, viverra justo. Integer sit amet elementum arcu, eget pharetra felis. In malesuada enim est, sed placerat nulla feugiat at. Vestibulum feugiat vitae elit sit amet tincidunt. Pellentesque finibus sed dolor non facilisis. Curabitur accumsan ante ac hendrerit vestibulum."`;

exports[`Blocks raw handling pasteHandler should strip some text-level elements 1`] = `
"<!-- wp:paragraph -->
<p>This is ncorect</p>
<!-- /wp:paragraph -->"
`;

exports[`Blocks raw handling pasteHandler should strip windows data 1`] = `
"<!-- wp:heading -->
<h2>Heading Win</h2>
<!-- /wp:heading -->

<!-- wp:paragraph -->
<p>Paragraph Win</p>
<!-- /wp:paragraph -->"
`;

exports[`rawHandler should convert HTML post to blocks with minimal content changes 1`] = `
"<!-- wp:heading -->
<h2>Howdy</h2>
<!-- /wp:heading -->

<!-- wp:image -->
<figure class=\\"wp-block-image\\"><img src=\\"https://w.org\\" alt=\\"\\"/></figure>
<!-- /wp:image -->

<!-- wp:paragraph -->
<p>This is a paragraph.</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>Preserve <span style=\\"color:red\\">me</span>!</p>
<!-- /wp:paragraph -->

<!-- wp:heading {\\"level\\":3} -->
<h3>More tag</h3>
<!-- /wp:heading -->

<!-- wp:more -->
<!--more-->
<!-- /wp:more -->

<!-- wp:heading {\\"level\\":3} -->
<h3>Shortcode</h3>
<!-- /wp:heading -->

<!-- wp:gallery {\\"shortCodeTransforms\\":[{\\"id\\":1}],\\"columns\\":3,\\"linkTo\\":\\"none\\"} -->
<figure class=\\"wp-block-gallery has-nested-images columns-3 is-cropped\\"></figure>
<!-- /wp:gallery -->

<!-- wp:html -->
<dl>
	<dt>Term</dt>
	<dd>
		Description.
	</dd>
</dl>
<!-- /wp:html -->

<!-- wp:list {\\"ordered\\":true} -->
<ol><li>Item</li></ol>
<!-- /wp:list -->

<!-- wp:quote -->
<blockquote class=\\"wp-block-quote\\"><p>Text.</p></blockquote>
<!-- /wp:quote -->

<!-- wp:html -->
<blockquote><h1>Heading</h1><p>Text.</p></blockquote>
<!-- /wp:html -->"
`;

exports[`rawHandler should convert a caption shortcode 1`] = `
"<!-- wp:image {\\"align\\":\\"none\\",\\"id\\":122,\\"className\\":\\"size-medium wp-image-122\\"} -->
<figure class=\\"wp-block-image alignnone size-medium wp-image-122\\"><img src=\\"image.png\\" alt=\\"\\" class=\\"wp-image-122\\"/><figcaption>test</figcaption></figure>
<!-- /wp:image -->"
`;

exports[`rawHandler should convert a caption shortcode with caption 1`] = `
"<!-- wp:image {\\"align\\":\\"none\\",\\"id\\":122,\\"className\\":\\"size-medium wp-image-122\\"} -->
<figure class=\\"wp-block-image alignnone size-medium wp-image-122\\"><img src=\\"image.png\\" alt=\\"\\" class=\\"wp-image-122\\"/><figcaption><a href=\\"https://w.org\\">test</a></figcaption></figure>
<!-- /wp:image -->"
`;

exports[`rawHandler should convert a caption shortcode with link 1`] = `
"<!-- wp:image {\\"align\\":\\"none\\",\\"id\\":754} -->
<figure class=\\"wp-block-image alignnone\\"><a href=\\"http://build.wordpress-develop.test/wp-content/uploads/2011/07/100_5478.jpg\\"><img src=\\"http://build.wordpress-develop.test/wp-content/uploads/2011/07/100_5478.jpg?w=604\\" alt=\\"Bell on Wharf\\" class=\\"wp-image-754\\"/></a><figcaption>Bell on wharf in San Francisco</figcaption></figure>
<!-- /wp:image -->"
`;

exports[`rawHandler should convert a list with attributes 1`] = `
"<!-- wp:list {\\"ordered\\":true,\\"type\\":\\"i\\",\\"start\\":2,\\"reversed\\":true} -->
<ol type=\\"i\\" reversed start=\\"2\\"><li>1
        <ol start=\\"2\\" reversed=\\"\\" type=\\"i\\">
            <li>1</li>
        </ol>
    </li></ol>
<!-- /wp:list -->"
`;

exports[`rawHandler should not strip any text-level elements 1`] = `
"<!-- wp:paragraph -->
<p>This is <u>ncorect</u></p>
<!-- /wp:paragraph -->"
`;

exports[`rawHandler should preserve alignment 1`] = `
"<!-- wp:paragraph {\\"align\\":\\"center\\"} -->
<p class=\\"has-text-align-center\\">center</p>
<!-- /wp:paragraph -->"
`;
